--- a/src/main/resources/templates/spring-index.html
+++ b/src/main/resources/templates/spring-index.html
@@ -18,7 +18,7 @@
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -141,6 +141,9 @@
                 <h2>전기차 충전소</h2>
                 <p>전기차 충전소 위치를 확인해주세요.</p>
             </div>
+
+            <a href="/car/allremove" class="btn btn-primary mb-1">초기화하기</a>
+            <button type="button" data-toggle="modal" data-target="#addModal" class="btn btn-primary mb-1">충전소위치 추가하기</button>
 
             <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col-12 portfolio-item filter-app">
@@ -296,27 +299,57 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
     </div>
-</footer><!-- End Footer -->
 
+
+</footer><!-- End Footer -->
+<div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <form action="/car/addcars" method="post">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addModalLabel">충전소 위치 추가하기</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="pageNum">충전소 api pagenumber</label>
+                        <input type="number" class="form-control" id="pageNum" name="pageNum" required value="1">
+                    </div>
+                    <div class="form-group">
+                        <label for="limit">충전소 api 최대갯수</label>
+                        <input type="number" class="form-control" id="limit" name="itemLimit" required value="10">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 <div id="preloader"></div>
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
 <!-- Vendor JS Files -->
 <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="assets/vendor/php-email-form/validate.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <!-- Template Main JS File -->
 <script src="assets/js/main.js"></script>
 
 </body>
 <footer>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2f79ebe45b214e41050ed6665e0b8c79"></script>
-    <script src="assets/js/index.js"></script>
+<!--    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2f79ebe45b214e41050ed6665e0b8c79"></script>-->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=185560aa8f9d88092db5ece0bd59732a"></script>
+    <script src="assets/js/spring-index.js"></script>
 
 </footer>
 </html>
